Styled tags, cropped text for mobile list view, fixed border radius, (#127)
fixed masonry view, adds/removes borders.

--- a/src/css/CollectionsShowPage.css
+++ b/src/css/CollectionsShowPage.css
@@ -164,6 +164,9 @@ div.collection-item .item-image {
   overflow: hidden;
   background-color: var(--light-gray);
 }
+div.collection-item .item-image .image-container {
+  border: none;
+}
 div.collection-item .item-image img {
   width: 250px;
   height: 200px;
