--- a/src/css/ListPages.css
+++ b/src/css/ListPages.css
@@ -15,6 +15,11 @@ div.collection-entry {
 
 div.collection-details h4 a {
   color: black;
+  -webkit-line-clamp: 5;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
 }
 
 h4.collection-title {
