--- a/src/css/Thumbnail.css
+++ b/src/css/Thumbnail.css
@@ -1,24 +1,49 @@
+.image-container {
+  position: relative;
+  border: 1px solid #e2e0e0;
+}
+
 .collection-label {
-  width: 100px;
-  height: 30px;
+  width: 80px;
+  height: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: red;
-  font-size: 20px;
+  font-family: "gineso-condensed", sans-serif;
+  background: var(--themeHighlightColor);
+  color: white;
+  font-size: 16px;
   position: absolute;
-  top: -75px;
+  top: 0;
   left: 0;
+  z-index: 1;
 }
 .archive-label {
-  width: 60px;
-  height: 30px;
+  width: 50px;
+  height: 25px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: gray;
-  font-size: 20px;
+  font-family: "gineso-condensed", sans-serif;
+  background: #75787b;
+  color: white;
+  font-size: 16px;
   position: absolute;
-  top: -75px;
+  top: 0;
   left: 0;
+  z-index: 1;
+}
+
+@media (min-width: 768px) {
+  .collection-label {
+    width: 100px;
+    height: 30px;
+    font-size: 20px;
+  }
+
+  .archive-label {
+    width: 80px;
+    height: 30px;
+    font-size: 20px;
+  }
 }
